examples/pivot_mod.css
.table-bordered{
    font-family: Arial;
    border-collapse: collapse;
    table-layout: fixed;
}
.pvtAxisContainer{
    padding: 10px;
}

.pvtAxisContainer {
    border-color: #ccc;
    border-width: 1px 0;
    background: #e9e9e9;
}
.pvtCols{
    border-bottom-width: 0;
    border-top-color:#fff;
}


.pvtUnused {background: #f7f7f7;border-width: 0 0 0 1px;}
.pvtHorizList {border-top-color: #fff;border-left-width: 1px;}
.pvtHorizList li { display: inline; }
.pvtVals{ width: 233px;white-space: nowrap;}

.pvtFilteredAttribute { font-style: italic }
.pvtRendererArea{ padding:0;}
select, input[type=checkbox]{
    -moz-appearance: none;
    -webkit-appearance: none;
    appearance:none;
}
select{
    background: #fff url("img/dropdown_arrow.gif") right 50% no-repeat;
    border: 1px solid #c1c1c1;
    height: 28px;
    width: 210px;
    padding: 4px 28px 4px 14px;
    font-size: 14px;
    font-weight: bold;
    color: #333;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    text-indent: .01px;
    text-overflow: ' ';
}
input[type=checkbox]{
    margin: 0 1em 0 0;
    border: 1px solid #b3b3b3;
    background-color: #e5e5e5;
    width: 17px;
    height: 17px;
}
input[type=checkbox]:checked{
    background: url("img/check.gif") 50% 50% no-repeat;
}
.pvtAxisContainer li nobr{
    background-color: #fff;
    border: 1px solid #c1c1c1;
    height: 28px;
    padding: 4px 0 4px 14px;
    font-size: 14px;
    font-weight: bold;
    color: #333;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
}

.pvtTriangle{
    background: #fff url("img/dropdown_drag.gif") right 50% no-repeat;
    width: 60px;
    display: inline-block;
    color: #fff;
    height: 19px;
}
.pvtRows .label{
    padding-right: 0;
    color: #333;
    }
/* Filterbox ----------*/
.pvtFilterBox {
    border-color:#c1c1c1;
    padding: 12px 10px;
    width: 377px;
}
.pvtFilterBox h4{
    display: none;
}
.pvtFilterBox p:first-child{
    padding-top: 0 !important;
}
.pvtFilterBox label, .pvtSearch{
    font-size: .8em;
}
.pvtFilterBox label span{
    position: relative;
    top: -4px;
}
.checkContainer{
    border: 1px solid #ddd;
    padding-top: 5px;
    overflow: auto;
    padding:3px;
    width: 320px;
}
.btns-search, .submit-btn{
    text-align: left;
}
.btns-search{
    margin:0 0 15px 0;
}
.pvtFilterBox button{
    background-color: #e9e9e9;
    padding: 10px;
    border: 0;
    font-size: .7em;
}
button span{
    font-weight: bold;
}
button:first-child{
    margin-right: 0;
    -webkit-border-top-left-radius: 5px;
    -webkit-border-bottom-left-radius: 5px;
    -moz-border-radius-topleft: 5px;
    -moz-border-radius-bottomleft: 5px;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}
button:nth-child(2){
    -webkit-border-top-right-radius: 5px;
    -webkit-border-bottom-right-radius: 5px;
    -moz-border-radius-topright: 5px;
    -moz-border-radius-bottomright: 5px;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
    }
.submit-btn button, .pvtSearch{
    -webkit-border-radius: 7px;
    -moz-border-radius: 7px;
    border-radius: 7px;
    }
.submit-btn button{
    background-color: #008bbc;
    color: #fff;
    font-weight: 400;
    font-size: 1em;
    padding: .4em 1em;
    margin-right: 13px;
}
.pvtSearch{
    padding: 8px 0 8px 30px;
    width:117px;
    margin-left: 12px;
    border: 1px solid #c9c9c9;
    background: url("img/search_ico.gif") 6px 50% no-repeat;
}
.nobkgd{
    background-image: none;
}
table.pvtTable .pvtColLabel{
    padding: 14px 18px;
}
.pvtAxisContainer  .active_filter{
    position: absolute;
    z-index: 100;
    border-bottom: 0;
    height: 20px;
    -webkit-border-bottom-right-radius: 0;
    -webkit-border-bottom-left-radius: 0;
    -moz-border-radius-bottomright: 0;
    -moz-border-radius-bottomleft: 0;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
}

